@@ -12,6 +12,7 @@ my $marker_count = 0;
 # Public
 has 'indent_block'        => ( is => 'ro', default => sub { 0 } );
 has 'indent_perl_block'   => ( is => 'ro', default => sub { 2 } );
+has 'mason_version'       => ( is => 'ro', required => 1, isa => \&validate_mason_version );
 has 'perltidy_argv'       => ( is => 'ro', default => sub { '' } );
 has 'perltidy_block_argv' => ( is => 'ro', default => sub { '' } );
 has 'perltidy_line_argv'  => ( is => 'ro', default => sub { '' } );
@@ -23,6 +24,10 @@ has '_is_mixed_block'   => ( is => 'lazy' );
 has '_marker_prefix'    => ( is => 'ro', default => sub { '__masontidy__' } );
 has '_open_block_regex' => ( is => 'lazy' );
 has '_subst_tag_regex'  => ( is => 'lazy' );
+
+func validate_mason_version () {
+    die "must be 1 or 2" unless $_[0] =~ /^[12]$/;
+}
 
 method _build__is_mixed_block () {
     return { map { ( $_, 1 ) } $self->mixed_block_names };
@@ -55,25 +60,6 @@ method mixed_block_names () {
     return qw(after augment around before def method override);
 }
 
-method get_options ($class: $argv, $params_ref) {
-    my %params;
-    my $result = GetOptionsFromArray(
-        $argv,
-        'h|help'                => \$params{help},
-        'p|pipe'                => \$params{pipe},
-        'r|replace'             => \$params{replace},
-        'indent-block=i'        => \$params{indent_block},
-        'indent-perl-block=i'   => \$params{indent_perl_block},
-        'perltidy-argv=s'       => \$params{perltidy_argv},
-        'perltidy-block-argv=s' => \$params{perltidy_block_argv},
-        'perltidy-line-argv=s'  => \$params{perltidy_line_argv},
-        'perltidy-tag-argv=s'   => \$params{perltidy_tag_argv},
-    );
-    %$params_ref =
-      map { ( $_, $params{$_} ) } grep { defined( $params{$_} ) } keys(%params);
-    return $result;
-}
-
 method tidy ($source) {
     my $final = $self->tidy_method($source);
     $final .= "\n" if substr( $final, -1, 1 ) ne "\n";
@@ -87,20 +73,22 @@ method tidy_method ($source) {
 
     my $last_line        = scalar(@lines) - 1;
     my $open_block_regex = $self->_open_block_regex;
+    my $mason1           = $self->mason_version == 1;
+    my $mason2           = $self->mason_version == 2;
 
     for ( my $cur_line = 0 ; $cur_line <= $last_line ; $cur_line++ ) {
         my $line = $lines[$cur_line];
 
         # Begin Mason 2 filter invocation
         #
-        if ( $line =~ /^%\s*(.*)\{\{\s*/ ) {
+        if ( $mason2 && $line =~ /^%\s*(.*)\{\{\s*/ ) {
             $add_element->( 'perl_line', "given (__filter($1)) {" );
             next;
         }
 
         # End Mason 2 filter invocation
         #
-        if ( $line =~ /^%\s*\}\}\s*/ ) {
+        if ( $mason2 && $line =~ /^%\s*\}\}\s*/ ) {
             $add_element->( 'perl_line', "} # __end filter" );
             next;
         }
@@ -171,8 +159,10 @@ method tidy_method ($source) {
         else {
             # Convert back filter invocation
             #
-            $line =~ s/given\s*\(\s*__filter\s*\(\s*(.*?)\s*\)\s*\)\s*\{/$1 \{\{/;
-            $line =~ s/\}\s*\#\s*__end filter/\}\}/;
+            if ($mason2) {
+                $line =~ s/given\s*\(\s*__filter\s*\(\s*(.*?)\s*\)\s*\)\s*\{/$1 \{\{/;
+                $line =~ s/\}\s*\#\s*__end filter/\}\}/;
+            }
 
             if ( my ($real_line) = ( $line =~ /(.*?)\s*\#\s*__perl_block/ ) ) {
                 if ( $real_line =~ /\S/ ) {
@@ -346,7 +336,7 @@ Mason::Tidy - Engine for masontidy
 
     use Mason::Tidy;
 
-    my $mc = Mason::Tidy->new();
+    my $mc = Mason::Tidy->new(mason_version => 2);
     my $dest = $mc->tidy($source);
 
 =head1 DESCRIPTION
@@ -360,7 +350,11 @@ You can call this API from your own program instead of executing C<masontidy>.
 
 =over
 
+=item indent_block
+
 =item indent_perl_block
+
+=item mason_version (required)
 
 =item perltidy_argv
 
@@ -368,7 +362,7 @@ You can call this API from your own program instead of executing C<masontidy>.
 
 =item perltidy_line_argv
 
-=item perltidy_subst_argv
+=item perltidy_tag_argv
 
 These options are the same as the equivalent C<masontidy> command-line options,
 replacing dashes with underscore (e.g. the C<--indent-per-block> option becomes
